Fix ul spacing in left sidebar
ERM47567

[5.x]

--- a/resources/stylesheets/structure/sidebar-primary.tabpanel.css
+++ b/resources/stylesheets/structure/sidebar-primary.tabpanel.css
@@ -64,6 +64,7 @@
 
 #sb-pri ul {
 	margin-left: 0;
+	margin-top: 0;
 }
 
 #sb-pri ul:empty {
